@@ -5,14 +5,14 @@ import java.util.Map;
 
 public class GenericMap {
 
-	public static void main(String[] args) {
-		Map<Integer, String> map = new HashMap<Integer, String>();
-		for (int i = 0; i < 3; i++) {
-			map.put(new Integer(i), "number" + i);
-		}
-		System.out.println(map.get(new Integer(0)));
-		System.out.println(map.get(new Integer(1)));
-		System.out.println(map.get(new Integer(2)));
-	}
+    public static void main(String[] args) {
+        Map<Integer, String> map = new HashMap<Integer, String>();
+        for (int i = 0; i < 3; i++) {
+            map.put(Integer.valueOf(i), "number" + i);
+        }
+        System.out.println(map.get(Integer.valueOf(0)));
+        System.out.println(map.get(Integer.valueOf(1)));
+        System.out.println(map.get(Integer.valueOf(2)));
+    }
 
 }
