@@ -6,28 +6,28 @@ import java.util.List;
 
 public class TestArrayList {
 
-	public static void main(String[] args) {
-		List list = new ArrayList();
-		//JDK 5以前要手動裝箱才能加入集合裡
-		list.add(new Integer(12)); //list.add(12)
-		list.add(new Long(34L));   //list.add(Long.valueOf(34L))
-		list.add(new Double(5.6));
-		list.add("Hello");
-		list.add("Hello"); // 值重覆仍加入到集合裡
+    public static void main(String[] args) {
+        List list = new ArrayList();
+        //JDK 5以前要手動裝箱才能加入集合裡
+        list.add(Integer.valueOf(12)); //list.add(12)
+        list.add(Long.valueOf(34L));   //list.add(Long.valueOf(34L))
+        list.add(new Double(5.6));
+        list.add("Hello");
+        list.add("Hello"); // 值重覆仍加入到集合裡
 
-		System.out.println("toString()=" + list);  //集合類別的toString方法都改寫過了(方便觀察用)
-		System.out.println("元素個數=" + list.size());
+        System.out.println("toString()=" + list);  //集合類別的toString方法都改寫過了(方便觀察用)
+        System.out.println("元素個數=" + list.size());
 
-		Iterator objs = list.iterator();
-		while (objs.hasNext())
-			System.out.println(objs.next());
-		
-		// List家族可以用Iterator或for迴圈取值
-		System.out.println();
-		for (int i = 0; i < list.size(); i++) { 
-			Object obj = list.get(i);
-			System.out.println(obj);
-		}
-	}
+        Iterator objs = list.iterator();
+        while (objs.hasNext())
+            System.out.println(objs.next());
+
+        // List家族可以用Iterator或for迴圈取值
+        System.out.println();
+        for (int i = 0; i < list.size(); i++) {
+            Object obj = list.get(i);
+            System.out.println(obj);
+        }
+    }
 
 }
